crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__for_loop.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      For:
        init:
          VarDecl:
            mutable: false
            uses_deprecated_var: false
            name:
              name: i
              span:
                start: 9
                end: 10
            type_ref: ~
            init:
              Literal:
                - Number: 0
                - start: 13
                  end: 14
            span:
              start: 5
              end: 15
        cond:
          Binary:
            op: Lt
            left:
              Identifier:
                name: i
                span:
                  start: 16
                  end: 17
            right:
              Literal:
                - Number: 10
                - start: 20
                  end: 22
            span:
              start: 16
              end: 22
        step:
          Assign:
            target:
              Name:
                name: i
                span:
                  start: 24
                  end: 25
            value:
              Binary:
                op: Add
                left:
                  Identifier:
                    name: i
                    span:
                      start: 28
                      end: 29
                right:
                  Literal:
                    - Number: 1
                    - start: 32
                      end: 33
                span:
                  start: 28
                  end: 33
            span:
              start: 24
              end: 25
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 37
                      end: 38
                span:
                  start: 37
                  end: 39
          span:
            start: 35
            end: 41
        span:
          start: 0
          end: 41
