crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__for_loop_parens.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      ForIn:
        variable:
          name: i
          span:
            start: 5
            end: 6
        iterable:
          ArrayLiteral:
            elements:
              - Literal:
                  - Number: 0
                  - start: 11
                    end: 12
              - Literal:
                  - Number: 1
                  - start: 14
                    end: 15
              - Literal:
                  - Number: 2
                  - start: 17
                    end: 18
              - Literal:
                  - Number: 3
                  - start: 20
                    end: 21
              - Literal:
                  - Number: 4
                  - start: 23
                    end: 24
            span:
              start: 10
              end: 25
        body:
          statements:
            - Expr:
                expr:
                  Identifier:
                    name: x
                    span:
                      start: 29
                      end: 30
                span:
                  start: 29
                  end: 31
          tail_expr: ~
          span:
            start: 27
            end: 33
        span:
          start: 0
          end: 33
