crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__function_call_no_args.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Call:
            callee:
              Identifier:
                name: foo
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            args: []
            span:
              start: 0
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
