crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__function_call_with_args.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
assertion_line: 120
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Call:
            callee:
              Identifier:
                name: foo
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            args:
              - Literal:
                  - Number: 1
                  - start: 4
                    end: 5
                    file: "<input>"
              - Literal:
                  - Number: 2
                  - start: 7
                    end: 8
                    file: "<input>"
              - Literal:
                  - Number: 3
                  - start: 10
                    end: 11
                    file: "<input>"
            type_args: []
            span:
              start: 0
              end: 12
              file: "<input>"
        span:
          start: 0
          end: 13
          file: "<input>"
