crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__json_as_number.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: data
                span:
                  start: 0
                  end: 4
                  file: "<input>"
            member:
              name: as_number
              span:
                start: 5
                end: 14
                file: "<input>"
            args: []
            span:
              start: 0
              end: 16
              file: "<input>"
        span:
          start: 0
          end: 17
          file: "<input>"
