crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__parser_basics__json_extraction_as_string.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/parser_basics.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Index:
                target:
                  Identifier:
                    name: json
                    span:
                      start: 0
                      end: 4
                      file: "<input>"
                index:
                  Single:
                    Literal:
                      - String: user
                      - start: 5
                        end: 11
                        file: "<input>"
                span:
                  start: 0
                  end: 12
                  file: "<input>"
            member:
              name: as_string
              span:
                start: 13
                end: 22
                file: "<input>"
            args: []
            span:
              start: 0
              end: 24
              file: "<input>"
        span:
          start: 0
          end: 25
          file: "<input>"
